-
Bug
-
Resolution: Done
-
P2: Important
-
5.9.1
-
None
-
Windows 10
Windows 7
Linux x64 (ibus, uim)
-
64a5f315206fac2316e0b4a5a65a5d1f66b1a219
Steps to reproduce:
- add any Chinese IME.
- build and run project in attachment.
- enable Chinese IME
- set focus on password input field and type some words.
IME still enable.
On most Browser, IME will disable, and user can only input ASCII character.
- resulted in
-
QTBUG-81206 Qt WebEngine password input field does not support keys registered for shortcuts on windows
-
- Closed
-
For Gerrit Dashboard: QTBUG-62433 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
205267,5 | Disable IME on password input | 5.10 | qt/qtwebengine | Status: MERGED | +2 | 0 |