src/core/render_widget_host_view_qt.h
@@ -270,6 +270,8 @@ private:
     uint m_cursorPosition;
     bool m_emptyPreviousSelection;
     QString m_surroundingText;
+
+    bool m_imeHasHiddenTextCapability;
 };
 
 } // namespace QtWebEngineCore
