src/core/render_widget_host_view_qt_delegate.h
@@ -106,7 +106,7 @@ public:
     virtual void updateCursor(const QCursor &) = 0;
     virtual void resize(int width, int height) = 0;
     virtual void move(const QPoint &) = 0;
-    virtual void inputMethodStateChanged(bool editorVisible) = 0;
+    virtual void inputMethodStateChanged(bool editorVisible, bool passwordInput) = 0;
     virtual void setInputMethodHints(Qt::InputMethodHints hints) = 0;
     virtual void setClearColor(const QColor &color) = 0;
 };
