src/webengine/render_widget_host_view_qt_delegate_quickwindow.h
@@ -76,7 +76,7 @@ public:
     virtual void updateCursor(const QCursor &) Q_DECL_OVERRIDE;
     virtual void resize(int width, int height) Q_DECL_OVERRIDE;
     virtual void move(const QPoint &screenPos) Q_DECL_OVERRIDE;
-    virtual void inputMethodStateChanged(bool) Q_DECL_OVERRIDE {}
+    virtual void inputMethodStateChanged(bool, bool) Q_DECL_OVERRIDE {}
     virtual void setInputMethodHints(Qt::InputMethodHints) Q_DECL_OVERRIDE { }
     virtual void setClearColor(const QColor &) Q_DECL_OVERRIDE { }
 
